# serializer version: 1
# name: test_compile_fix_disallowed_import
  dict({
    'fixed_code': '''
      from dataclasses import dataclass, field
      
      INSTRUCTION_OBSERVATION = "Record the primary details of each knowledge item so it can be reliably retrieved."
      INSTRUCTION_QUERY = "Specify the intent and criteria needed to locate relevant knowledge items."
      INSTRUCTION_RESPONSE = "Answer concisely using stored knowledge, staying well under any length limits."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class Observation:
          raw: str = field(metadata={"description": "Raw text to store in the knowledge base."})
      
      
      @dataclass
      class Query:
          raw: str = field(metadata={"description": "Text describing what to retrieve."})
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
              self.toolkit.logger.debug(f"Stored: {observation.raw[:80]}")
      
          def read(self, query: Query) -> str:
              return "\n".join(self.store) if self.store else "No information stored."
  
    ''',
    'original_error_details': 'Disallowed import: numpy',
    'original_error_type': 'Import whitelist violation',
  })
# ---
# name: test_compile_fix_runtime_bug
  dict({
    'fixed_code': '''
      from dataclasses import dataclass
      
      INSTRUCTION_OBSERVATION = ""
      INSTRUCTION_QUERY = ""
      INSTRUCTION_RESPONSE = ""
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      def process_text(text: str) -> str:
          return text.strip()
      
      @dataclass
      class Observation:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, observation: Observation) -> None:
              processed = process_text(observation.raw)
              self.store.append(processed)
      
          def read(self, query: Query) -> str:
              return "\n".join(self.store) if self.store else "No information stored."
  
    ''',
    'original_smoke_error': "Runtime: name 'process_text' is not defined",
  })
# ---
# name: test_end_to_end_offline
  dict({
    'first_output': 'Paris',
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
  })
# ---
# name: test_end_to_end_online
  dict({
    'logs': list([
      'Val score: 1.000 (1 cases)',
    ]),
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
    'val_output': 'Green apple',
  })
# ---
# name: test_observation_generation
  dict({
    'output': '{"raw":"The capital of France is Paris."}',
    'prompt': '''
      Given the following text, create an Observation object to store this information in memory.
      
      Text: The capital of France is Paris.
      
      The Observation must conform to this schema:
      // Observation: Raw text observation to store in the knowledge base.
      {
        "raw": "..."  // str, The raw text to store
      }
      
      Output ONLY a valid JSON object matching the schema fields. No explanation.
    ''',
  })
# ---
# name: test_observation_with_feedback
  dict({
    'output': '{"raw":"Evaluation feedback indicates the user answered a question incorrectly; the correct answer is Paris."}',
    'prompt': '''
      Evaluation result: Score: 0.0 (incorrect)
      Ground truth: Paris
      
      Based on this feedback, generate an observation to write into memory.
      
      The observation must be a JSON object matching this schema:
      // Observation: Raw text observation to store in the knowledge base.
      {
        "raw": "..."  // str, The raw text to store
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_patch_generation_compile_fix
  dict({
    'fixed_code': '''
      import json
      from dataclasses import dataclass, field
      from typing import Optional
      
      INSTRUCTION_OBSERVATION = "Document the primary facts, supporting detail, and relevant context for every new knowledge item."
      INSTRUCTION_QUERY = "Describe the focus area, desired depth, and any constraints when requesting knowledge from the base."
      INSTRUCTION_RESPONSE = "Answer succinctly by listing the most relevant entries, highlighting their topics and importance."
      ALWAYS_ON_KNOWLEDGE = "All knowledge references must originate from stored observations; avoid speculation."
      
      
      @dataclass
      class Observation:
          topic: str = field(metadata={"description": "Primary topic for the observation."})
          detail: str = field(metadata={"description": "Detailed narrative of the information captured."})
          tags: list[str] = field(metadata={"description": "Keywords to help categorize or locate this observation."})
          importance: int = field(metadata={"description": "Numeric score conveying how critical the observation is."})
      
      
      @dataclass
      class Query:
          topic: Optional[str] = field(default=None, metadata={"description": "Keyword or topic to prioritize when searching."})
          limit: int = field(default=5, metadata={"description": "Maximum number of entries the response should include."})
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.logger = toolkit.logger
              self.conn = toolkit.db
              self.logger.debug("Initializing KnowledgeBase.")
              self.conn.execute(
                  """CREATE TABLE IF NOT EXISTS observations (
                         topic TEXT NOT NULL,
                         detail TEXT NOT NULL,
                         tags TEXT NOT NULL,
                         importance INTEGER NOT NULL
                     )"""
              )
              self.conn.commit()
      
          def write(self, observation: Observation) -> None:
              self.logger.debug(
                  "Persisting observation topic=%s importance=%s", observation.topic, observation.importance
              )
              tags_json = json.dumps(observation.tags)
              self.conn.execute(
                  "INSERT INTO observations (topic, detail, tags, importance) VALUES (?, ?, ?, ?)",
                  (observation.topic, observation.detail, tags_json, observation.importance),
              )
              self.conn.commit()
              self.logger.debug("Observation committed.")
      
          def read(self, query: Query) -> str:
              limit = max(1, query.limit)
              params = []
              sql = "SELECT topic, detail, tags, importance FROM observations"
              if query.topic:
                  sql += " WHERE topic LIKE ? OR detail LIKE ?"
                  pattern = f"%{query.topic}%"
                  params.extend([pattern, pattern])
              sql += " ORDER BY importance DESC, ROWID DESC LIMIT ?"
              params.append(limit)
              self.logger.debug("Querying knowledge base sql=%s params=%s", sql, params)
              cursor = self.conn.execute(sql, params)
              entries = []
              total_length = 0
              for topic, detail, tags_json, importance in cursor:
                  tags = json.loads(tags_json)
                  entry = f"Topic: {topic} | Detail: {detail} | Importance: {importance} | Tags: {', '.join(tags)}"
                  projected_length = total_length + len(entry) + (1 if entries else 0)
                  if projected_length > 1000:
                      self.logger.debug("Truncating response to satisfy character limit.")
                      break
                  entries.append(entry)
                  total_length = projected_length
              if not entries:
                  self.logger.debug("No matching entries to return.")
                  return "No relevant entries found."
              return "\n".join(entries)
  
    ''',
    'output': '''
      *** Begin Patch
      *** Update File: program.py
      @@
      -from dataclasses import dataclass
      -
      -INSTRUCTION_OBSERVATION = ""
      -INSTRUCTION_QUERY = ""
      -INSTRUCTION_RESPONSE = ""
      -ALWAYS_ON_KNOWLEDGE = ""
      -
      -
      -@dataclass
      -class Observation:
      -    raw: str
      -
      -
      -@dataclass
      -class Query:
      -    raw: str
      -
      -
      -class KnowledgeBase:
      -    def __init__(self, toolkit):
      -        self.toolkit = toolkit
      -        self.store = []
      -
      -    def write(self, observation: Observation) -> None:
      -        self.store.append(observation.raw)
      -
      -    def read(self, query: Query) -> str:
      -        # Bug: missing closing parenthesis
      -        return "\n".join(self.store[:5] if self.store else "No information stored."
      +import json
      +from dataclasses import dataclass, field
      +from typing import Optional
      +
      +INSTRUCTION_OBSERVATION = "Document the primary facts, supporting detail, and relevant context for every new knowledge item."
      +INSTRUCTION_QUERY = "Describe the focus area, desired depth, and any constraints when requesting knowledge from the base."
      +INSTRUCTION_RESPONSE = "Answer succinctly by listing the most relevant entries, highlighting their topics and importance."
      +ALWAYS_ON_KNOWLEDGE = "All knowledge references must originate from stored observations; avoid speculation."
      +
      +
      +@dataclass
      +class Observation:
      +    topic: str = field(metadata={"description": "Primary topic for the observation."})
      +    detail: str = field(metadata={"description": "Detailed narrative of the information captured."})
      +    tags: list[str] = field(metadata={"description": "Keywords to help categorize or locate this observation."})
      +    importance: int = field(metadata={"description": "Numeric score conveying how critical the observation is."})
      +
      +
      +@dataclass
      +class Query:
      +    topic: Optional[str] = field(default=None, metadata={"description": "Keyword or topic to prioritize when searching."})
      +    limit: int = field(default=5, metadata={"description": "Maximum number of entries the response should include."})
      +
      +
      +class KnowledgeBase:
      +    def __init__(self, toolkit):
      +        self.toolkit = toolkit
      +        self.logger = toolkit.logger
      +        self.conn = toolkit.db
      +        self.logger.debug("Initializing KnowledgeBase.")
      +        self.conn.execute(
      +            """CREATE TABLE IF NOT EXISTS observations (
      +                   topic TEXT NOT NULL,
      +                   detail TEXT NOT NULL,
      +                   tags TEXT NOT NULL,
      +                   importance INTEGER NOT NULL
      +               )"""
      +        )
      +        self.conn.commit()
      +
      +    def write(self, observation: Observation) -> None:
      +        self.logger.debug(
      +            "Persisting observation topic=%s importance=%s", observation.topic, observation.importance
      +        )
      +        tags_json = json.dumps(observation.tags)
      +        self.conn.execute(
      +            "INSERT INTO observations (topic, detail, tags, importance) VALUES (?, ?, ?, ?)",
      +            (observation.topic, observation.detail, tags_json, observation.importance),
      +        )
      +        self.conn.commit()
      +        self.logger.debug("Observation committed.")
      +
      +    def read(self, query: Query) -> str:
      +        limit = max(1, query.limit)
      +        params = []
      +        sql = "SELECT topic, detail, tags, importance FROM observations"
      +        if query.topic:
      +            sql += " WHERE topic LIKE ? OR detail LIKE ?"
      +            pattern = f"%{query.topic}%"
      +            params.extend([pattern, pattern])
      +        sql += " ORDER BY importance DESC, ROWID DESC LIMIT ?"
      +        params.append(limit)
      +        self.logger.debug("Querying knowledge base sql=%s params=%s", sql, params)
      +        cursor = self.conn.execute(sql, params)
      +        entries = []
      +        total_length = 0
      +        for topic, detail, tags_json, importance in cursor:
      +            tags = json.loads(tags_json)
      +            entry = f"Topic: {topic} | Detail: {detail} | Importance: {importance} | Tags: {', '.join(tags)}"
      +            projected_length = total_length + len(entry) + (1 if entries else 0)
      +            if projected_length > 1000:
      +                self.logger.debug("Truncating response to satisfy character limit.")
      +                break
      +            entries.append(entry)
      +            total_length = projected_length
      +        if not entries:
      +            self.logger.debug("No matching entries to return.")
      +            return "No relevant entries found."
      +        return "\n".join(entries)
      *** End Patch
    ''',
    'prompt': '''
      You are an expert Python programmer. A Knowledge Base Program failed to compile or run.
      Fix the error and output your fix as a patch.
      
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **Observation** (dataclass): Defines what information is captured when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as Observation
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, observation: Observation) -> None`: Store information
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
      
      ## Instruction Constants (required)
      
      Four module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_OBSERVATION: Instruction for observation generation. Tells the task LLM what to extract and how to structure it. The Observation schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
      
      INSTRUCTION_OBSERVATION, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
      
      
      Rules:
      1. Output ONLY the fix as a patch. No explanation needed.
      2. The code must define exactly three classes (Observation, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_OBSERVATION, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
      3. Only use allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb.
      4. Make minimal changes — fix ONLY the broken line(s). Do NOT add new fields, imports, or restructure the code.
      
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      
      ## Broken Code
      
      ```python
      from dataclasses import dataclass
      
      INSTRUCTION_OBSERVATION = ""
      INSTRUCTION_QUERY = ""
      INSTRUCTION_RESPONSE = ""
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class Observation:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
      
          def read(self, query: Query) -> str:
              # Bug: missing closing parenthesis
              return "\n".join(self.store[:5] if self.store else "No information stored."
      
      ```
      
      ## Error
      
      **Syntax error**: '(' was never closed (<unknown>, line 29)
      
      Fix the error and output your fix as a patch.
    ''',
  })
# ---
# name: test_patch_generation_reflection
  dict({
    'output': '''
      Diagnosis:
      The current KB simply appends every Observation’s raw text to a list and read() always joins the whole list and slices it to 1000 characters, so queries like “What is Alice’s favorite color?” never filter for Alice specifically and always return the same generic block instead of the relevant fact. Moreover, both Observation and Query are unstructured (“raw” text only), so the LLM-driven data extraction and retrieval can’t tap into any schema to locate subject–predicate–object knowledge. To fix this, the KB needs a structured observation schema plus targetted SQL-based retrieval: store subject, predicate, object, and optional context; accept queries by subject/predicate/keywords; and have read() filter the sqlite table to return only matching facts (still bounded to 1000 characters). Comments explain why each piece works and instructions give the LLM schema/format guidance.
      
      *** Begin Patch
      *** Update File: program.py
      @@
      -from dataclasses import dataclass, field
      +from dataclasses import dataclass, field
      +from typing import Optional
      +import sqlite3
       
      -INSTRUCTION_OBSERVATION = "Given the following text, create an Observation object to store this information in the knowledge base. Include all key information."
      -INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      -INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      -ALWAYS_ON_KNOWLEDGE = ""
      +INSTRUCTION_OBSERVATION = (
      +    "When observing a fact, break it into subject, predicate, object, and optional context. "
      +    "Return a JSON object matching the Observation schema, focusing on explicit assertions. "
      +    "If a sentence says 'Alice likes blue', set subject='Alice', predicate='likes', object='blue'."
      +)
      +INSTRUCTION_QUERY = (
      +    "Translate the user question into a structured query using subject, predicate, and keywords. "
      +    "Prefer exact subjects/predicates when mentioned; fall back to keywords when necessary."
      +)
      +INSTRUCTION_RESPONSE = (
      +    "Answer concisely by quoting at most the few facts that directly support the query, "
      +    "and keep the response under 1000 characters. Do not add extra explanation."
      +)
      +ALWAYS_ON_KNOWLEDGE = (
      +    "Remember that every observation is structured as subject/predicate/object/context, "
      +    "and queries should filter those fields rather than returning the entire store."
      +)
       
       
       @dataclass
       class Observation:
      -    """Raw text observation to store in the knowledge base."""
      -    raw: str = field(metadata={"description": "The raw text to store"})
      +    """Observation broken into structured fact components."""
      +    subject: str = field(
      +        metadata={"description": "Entity or actor that the fact is about"}
      +    )
      +    predicate: str = field(
      +        metadata={"description": "Relationship or attribute that connects subject to object"}
      +    )
      +    object: str = field(
      +        metadata={"description": "Thing that completes the fact about the subject"}
      +    )
      +    context: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "Optional additional context (scene, time, nuance) for the fact"},
      +    )
       
       
       @dataclass
       class Query:
      -    """Raw text query to retrieve from the knowledge base."""
      -    raw: str = field(metadata={"description": "The query text to search for"})
      +    """Structured query parameters for retrieving stored facts."""
      +    subject: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "Subject to search for (use None if any subject is acceptable)"},
      +    )
      +    predicate: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "Predicate to search for if mentioned in the question"},
      +    )
      +    keywords: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "Supplementary keywords to fuzzy-match against any field"},
      +    )
       
       
       class KnowledgeBase:
           """Simple append-all / return-all knowledge base."""
       
           def __init__(self, toolkit):
      -        self.toolkit = toolkit
      -        self.store: list[str] = []
      +        # Store references to toolkit components for reuse and logging
      +        self.toolkit = toolkit
      +        self.db: sqlite3.Connection = toolkit.db
      +        # Ensure the table exists so we can write/read structured observations
      +        self._ensure_table()
       
           def write(self, observation: Observation) -> None:
      -        self.store.append(observation.raw)
      -        self.toolkit.logger.debug(f"Stored: {observation.raw}")
      +        # Persist the structured observation so we can filter by field later
      +        with self.db:
      +            self.db.execute(
      +                """
      +                INSERT INTO observations (subject, predicate, object, context)
      +                VALUES (?, ?, ?, ?)
      +                """,
      +                (
      +                    observation.subject,
      +                    observation.predicate,
      +                    observation.object,
      +                    observation.context,
      +                ),
      +            )
      +        self.toolkit.logger.debug(
      +            f"Stored observation: {observation.subject} {observation.predicate} {observation.object}"
      +        )
       
           def read(self, query: Query) -> str:
      -        self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
      -        if not self.store:
      -            return "No information stored."
      -        result = "\n".join(self.store)
      -        return result[:1000]
      +        # Build dynamic SQL filters based on which query fields are present
      +        filters = []
      +        params = []
      +        if query.subject:
      +            filters.append("subject LIKE ?")
      +            params.append(f"%{query.subject}%")
      +        if query.predicate:
      +            filters.append("predicate LIKE ?")
      +            params.append(f"%{query.predicate}%")
      +        if query.keywords:
      +            for keyword in query.keywords.split():
      +                filters.append(
      +                    "(subject LIKE ? OR predicate LIKE ? OR object LIKE ? OR context LIKE ?)"
      +                )
      +                params.extend([f"%{keyword}%"] * 4)
      +        where_clause = " AND ".join(filters) if filters else "1"
      +
      +        self.toolkit.logger.debug(f"Running read with filters={filters}, params={params}")
      +
      +        cursor = self.db.execute(
      +            f"""
      +            SELECT subject, predicate, object, context
      +            FROM observations
      +            WHERE {where_clause}
      +            ORDER BY rowid DESC
      +            LIMIT 5
      +            """,
      +            params,
      +        )
      +        rows = cursor.fetchall()
      +        if not rows:
      +            return "No matching information stored."
      +
      +        # Format each matching fact clearly and slice to stay under 1000 characters
      +        formatted = []
      +        for subject, predicate, obj, context in rows:
      +            context_text = context if context else "context not provided"
      +            formatted.append(f"{subject} {predicate} {obj}. Context: {context_text}")
      +
      +        response = "\n".join(formatted)
      +        return response[:1000]
      +
      +    def _ensure_table(self) -> None:
      +        """Create the observations table if it doesn't exist yet."""
      +        with self.db:
      +            self.db.execute(
      +                """
      +                CREATE TABLE IF NOT EXISTS observations (
      +                    id INTEGER PRIMARY KEY AUTOINCREMENT,
      +                    subject TEXT NOT NULL,
      +                    predicate TEXT NOT NULL,
      +                    object TEXT NOT NULL,
      +                    context TEXT
      +                )
      +                """
      +            )
      *** End Patch
    ''',
    'patched_code': '''
      from dataclasses import dataclass, field
      from typing import Optional
      import sqlite3
      
      INSTRUCTION_OBSERVATION = (
          "When observing a fact, break it into subject, predicate, object, and optional context. "
          "Return a JSON object matching the Observation schema, focusing on explicit assertions. "
          "If a sentence says 'Alice likes blue', set subject='Alice', predicate='likes', object='blue'."
      )
      INSTRUCTION_QUERY = (
          "Translate the user question into a structured query using subject, predicate, and keywords. "
          "Prefer exact subjects/predicates when mentioned; fall back to keywords when necessary."
      )
      INSTRUCTION_RESPONSE = (
          "Answer concisely by quoting at most the few facts that directly support the query, "
          "and keep the response under 1000 characters. Do not add extra explanation."
      )
      ALWAYS_ON_KNOWLEDGE = (
          "Remember that every observation is structured as subject/predicate/object/context, "
          "and queries should filter those fields rather than returning the entire store."
      )
      
      
      @dataclass
      class Observation:
          """Observation broken into structured fact components."""
          subject: str = field(
              metadata={"description": "Entity or actor that the fact is about"}
          )
          predicate: str = field(
              metadata={"description": "Relationship or attribute that connects subject to object"}
          )
          object: str = field(
              metadata={"description": "Thing that completes the fact about the subject"}
          )
          context: Optional[str] = field(
              default=None,
              metadata={"description": "Optional additional context (scene, time, nuance) for the fact"},
          )
      
      
      @dataclass
      class Query:
          """Structured query parameters for retrieving stored facts."""
          subject: Optional[str] = field(
              default=None,
              metadata={"description": "Subject to search for (use None if any subject is acceptable)"},
          )
          predicate: Optional[str] = field(
              default=None,
              metadata={"description": "Predicate to search for if mentioned in the question"},
          )
          keywords: Optional[str] = field(
              default=None,
              metadata={"description": "Supplementary keywords to fuzzy-match against any field"},
          )
      
      
      class KnowledgeBase:
          """Simple append-all / return-all knowledge base."""
      
          def __init__(self, toolkit):
              # Store references to toolkit components for reuse and logging
              self.toolkit = toolkit
              self.db: sqlite3.Connection = toolkit.db
              # Ensure the table exists so we can write/read structured observations
              self._ensure_table()
      
          def write(self, observation: Observation) -> None:
              # Persist the structured observation so we can filter by field later
              with self.db:
                  self.db.execute(
                      """
                      INSERT INTO observations (subject, predicate, object, context)
                      VALUES (?, ?, ?, ?)
                      """,
                      (
                          observation.subject,
                          observation.predicate,
                          observation.object,
                          observation.context,
                      ),
                  )
              self.toolkit.logger.debug(
                  f"Stored observation: {observation.subject} {observation.predicate} {observation.object}"
              )
      
          def read(self, query: Query) -> str:
              # Build dynamic SQL filters based on which query fields are present
              filters = []
              params = []
              if query.subject:
                  filters.append("subject LIKE ?")
                  params.append(f"%{query.subject}%")
              if query.predicate:
                  filters.append("predicate LIKE ?")
                  params.append(f"%{query.predicate}%")
              if query.keywords:
                  for keyword in query.keywords.split():
                      filters.append(
                          "(subject LIKE ? OR predicate LIKE ? OR object LIKE ? OR context LIKE ?)"
                      )
                      params.extend([f"%{keyword}%"] * 4)
              where_clause = " AND ".join(filters) if filters else "1"
      
              self.toolkit.logger.debug(f"Running read with filters={filters}, params={params}")
      
              cursor = self.db.execute(
                  f"""
                  SELECT subject, predicate, object, context
                  FROM observations
                  WHERE {where_clause}
                  ORDER BY rowid DESC
                  LIMIT 5
                  """,
                  params,
              )
              rows = cursor.fetchall()
              if not rows:
                  return "No matching information stored."
      
              # Format each matching fact clearly and slice to stay under 1000 characters
              formatted = []
              for subject, predicate, obj, context in rows:
                  context_text = context if context else "context not provided"
                  formatted.append(f"{subject} {predicate} {obj}. Context: {context_text}")
      
              response = "\n".join(formatted)
              return response[:1000]
      
          def _ensure_table(self) -> None:
              """Create the observations table if it doesn't exist yet."""
              with self.db:
                  self.db.execute(
                      """
                      CREATE TABLE IF NOT EXISTS observations (
                          id INTEGER PRIMARY KEY AUTOINCREMENT,
                          subject TEXT NOT NULL,
                          predicate TEXT NOT NULL,
                          object TEXT NOT NULL,
                          context TEXT
                      )
                      """
                  )
  
    ''',
    'prompt': '''
      You are an expert Python programmer specializing in knowledge base system design.
      
      Your task: Given a Knowledge Base Program (Python code defining Observation, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
      
      <interface_spec>
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **Observation** (dataclass): Defines what information is captured when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as Observation
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, observation: Observation) -> None`: Store information
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
      
      ## Instruction Constants (required)
      
      Four module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_OBSERVATION: Instruction for observation generation. Tells the task LLM what to extract and how to structure it. The Observation schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
      
      INSTRUCTION_OBSERVATION, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
      
      </interface_spec>
      
      <rules>
      1. Output your diagnosis first, then your changes as a patch using the format below.
      2. The code must define exactly three classes (Observation, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_OBSERVATION, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
      3. KnowledgeBase.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
      4. `read()` must return at most 1000 characters — do not return all stored text.
      5. Keep it simple. Make minimal, targeted fixes.
      6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
      7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
      </rules>
      
      <patch_format>
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      </patch_format>
      
      <current_program iteration="1">
      ```python
      from dataclasses import dataclass, field
      
      INSTRUCTION_OBSERVATION = "Given the following text, create an Observation object to store this information in the knowledge base. Include all key information."
      INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class Observation:
          """Raw text observation to store in the knowledge base."""
          raw: str = field(metadata={"description": "The raw text to store"})
      
      
      @dataclass
      class Query:
          """Raw text query to retrieve from the knowledge base."""
          raw: str = field(metadata={"description": "The query text to search for"})
      
      
      class KnowledgeBase:
          """Simple append-all / return-all knowledge base."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
              self.toolkit.logger.debug(f"Stored: {observation.raw}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
              if not self.store:
                  return "No information stored."
              result = "\n".join(self.store)
              return result[:1000]
      
      ```
      </current_program>
      
      <evaluation_score>0.200</evaluation_score>
      
      
      The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
      
      <failed_cases>
      <case id="1">
      <question>What is Alice's favorite color?</question>
      <expected>blue</expected>
      <model_generation>I don't know</model_generation>
      <score>0.0</score>
      <conversation>
        [user]: What is Alice's favorite color?
        [assistant]: I don't know
      </conversation>
      </case>
      
      </failed_cases>
      
      <task>
      1. Diagnose why these cases fail.
      2. Propose specific improvements to the Knowledge Base Program.
      3. Output your changes as a patch.
      </task>
    ''',
  })
# ---
# name: test_query_generation
  dict({
    'output': '{"raw":"capital of France"}',
    'prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from the knowledge base.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_reflection
  dict({
    'output': '''
      Diagnosis:
      The knowledge base was too simplistic: it only appended raw text, ignored observation structure, and returned every stored entry regardless of the user query, so “Paris” could never be singled out. The read path never used the query fields, and the instructions/always-knowledge strings gave no guidance to the LLM-generators. To fix this, I structured observations with a topic/detail schema, taught read() to query a sqlite facts table using topic/keywords filters, and added concise instruction/knowledge strings so the downstream agents know how to populate and use the schemas. The read() method now returns at most 1000 characters of the most relevant entries, and comments explain the design choices.
      
      *** Begin Patch
      *** Update File: program.py
      @@
      -from dataclasses import dataclass, field
      +import sqlite3
      +from dataclasses import dataclass, field
      +from typing import Optional
       
      -INSTRUCTION_OBSERVATION = "Given the following text, create an Observation object to store this information in the knowledge base. Include all key information."
      -INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      -INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      -ALWAYS_ON_KNOWLEDGE = ""
      +INSTRUCTION_OBSERVATION = (
      +    "Extract one concrete fact from the input and populate an Observation "
      +    "object with a clear topic and supporting detail that the knowledge base "
      +    "can later query."
      +)
      +INSTRUCTION_QUERY = (
      +    "Read the user question and populate a Query object specifying a topic "
      +    "and/or keywords that narrow the search to a small number of relevant facts."
      +)
      +INSTRUCTION_RESPONSE = (
      +    "Use the retrieved knowledge to answer succinctly in one or two sentences. "
      +    "If nothing is found, say that no matching information is available."
      +)
      +ALWAYS_ON_KNOWLEDGE = "Facts should be stored with a topic and detail, and read results must never exceed 1000 characters."
       
       
       @dataclass
       class Observation:
           """Raw text observation to store in the knowledge base."""
      -    raw: str = field(metadata={"description": "The raw text to store"})
      +    topic: str = field(
      +        metadata={"description": "High-level topic, such as 'capital cities' or 'tax rules'"}
      +    )
      +    detail: str = field(
      +        metadata={"description": "Supporting detail or fact related to the topic"}
      +    )
       
       
       @dataclass
       class Query:
           """Raw text query to retrieve from the knowledge base."""
      -    raw: str = field(metadata={"description": "The query text to search for"})
      +    topic: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "Topic to focus the search if known"}
      +    )
      +    keywords: Optional[str] = field(
      +        default=None,
      +        metadata={"description": "Keywords that should appear in the detail text"}
      +    )
       
       
       class KnowledgeBase:
           """Simple append-all / return-all knowledge base."""
       
           def __init__(self, toolkit):
      -        self.toolkit = toolkit
      -        self.store: list[str] = []
      +        self.toolkit = toolkit
      +        self.db = toolkit.db
      +        self._initialize_tables()
       
           def write(self, observation: Observation) -> None:
      -        self.store.append(observation.raw)
      -        self.toolkit.logger.debug(f"Stored: {observation.raw}")
      +        """Store topic/detail pairs in the sqlite table for targeted retrieval."""
      +        cursor = self.db.cursor()
      +        cursor.execute(
      +            "INSERT INTO facts (topic, detail) VALUES (?, ?)",
      +            (observation.topic.strip(), observation.detail.strip()),
      +        )
      +        self.db.commit()
      +        self.toolkit.logger.debug(
      +            f"Inserted observation with topic '{observation.topic}'"
      +        )
       
           def read(self, query: Query) -> str:
      -        self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
      -        if not self.store:
      -            return "No information stored."
      -        result = "\n".join(self.store)
      -        return result[:1000]
      +        """Retrieve up to 1000 characters of facts filtered by topic/keywords."""
      +        self.toolkit.logger.debug(
      +            f"Query topic='{query.topic}' keywords='{query.keywords}'"
      +        )
      +        cursor = self.db.cursor()
      +        clauses = []
      +        params = []
      +        if query.topic:
      +            clauses.append("topic = ?")
      +            params.append(query.topic.strip())
      +        if query.keywords:
      +            clauses.append("detail LIKE ?")
      +            params.append(f"%{query.keywords.strip()}%")
      +        sql = "SELECT topic, detail FROM facts"
      +        if clauses:
      +            sql += " WHERE " + " AND ".join(clauses)
      +        sql += " ORDER BY id DESC LIMIT 10"
      +        cursor.execute(sql, params)
      +        rows = cursor.fetchall()
      +        if not rows:
      +            self.toolkit.logger.debug("No matching rows found.")
      +            return "No matching knowledge found."
      +        combined = "\n".join(f"{topic}: {detail}" for topic, detail in rows)
      +        if len(combined) <= 1000:
      +            return combined
      +        truncated = combined[:1000].rstrip()
      +        self.toolkit.logger.debug("Result truncated to stay within 1000 chars.")
      +        return truncated + "…"
      +
      +    def _initialize_tables(self) -> None:
      +        """Ensure the facts table exists before writing or reading."""
      +        cursor = self.db.cursor()
      +        cursor.execute(
      +            """
      +            CREATE TABLE IF NOT EXISTS facts (
      +                id INTEGER PRIMARY KEY AUTOINCREMENT,
      +                topic TEXT NOT NULL,
      +                detail TEXT NOT NULL
      +            )
      +            """
      +        )
      +        self.db.commit()
      *** End Patch
    ''',
    'prompt': '''
      You are an expert Python programmer specializing in knowledge base system design.
      
      Your task: Given a Knowledge Base Program (Python code defining Observation, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
      
      <interface_spec>
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **Observation** (dataclass): Defines what information is captured when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as Observation
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, observation: Observation) -> None`: Store information
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
      
      ## Instruction Constants (required)
      
      Four module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_OBSERVATION: Instruction for observation generation. Tells the task LLM what to extract and how to structure it. The Observation schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
      
      INSTRUCTION_OBSERVATION, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
      
      </interface_spec>
      
      <rules>
      1. Output your diagnosis first, then your changes as a patch using the format below.
      2. The code must define exactly three classes (Observation, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_OBSERVATION, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
      3. KnowledgeBase.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
      4. `read()` must return at most 1000 characters — do not return all stored text.
      5. Keep it simple. Make minimal, targeted fixes.
      6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
      7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
      </rules>
      
      <patch_format>
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      </patch_format>
      
      <current_program iteration="1">
      ```python
      from dataclasses import dataclass, field
      
      INSTRUCTION_OBSERVATION = "Given the following text, create an Observation object to store this information in the knowledge base. Include all key information."
      INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class Observation:
          """Raw text observation to store in the knowledge base."""
          raw: str = field(metadata={"description": "The raw text to store"})
      
      
      @dataclass
      class Query:
          """Raw text query to retrieve from the knowledge base."""
          raw: str = field(metadata={"description": "The query text to search for"})
      
      
      class KnowledgeBase:
          """Simple append-all / return-all knowledge base."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
              self.toolkit.logger.debug(f"Stored: {observation.raw}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
              if not self.store:
                  return "No information stored."
              result = "\n".join(self.store)
              return result[:1000]
      
      ```
      </current_program>
      
      <evaluation_score>0.300</evaluation_score>
      
      
      The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
      
      <failed_cases>
      <case id="1">
      <question>What is the capital of France?</question>
      <expected>Paris</expected>
      <model_generation>I don't know</model_generation>
      <score>0.0</score>
      <conversation>
        [user]: What is the capital of France?
        [assistant]: I don't know
      </conversation>
      </case>
      
      </failed_cases>
      
      <task>
      1. Diagnose why these cases fail.
      2. Propose specific improvements to the Knowledge Base Program.
      3. Output your changes as a patch.
      </task>
    ''',
  })
# ---
# name: test_reflection_recovery
  dict({
    'reflected_code': '''
      import re
      from dataclasses import dataclass, field
      
      INSTRUCTION_OBSERVATION = (
          "Extract concrete, self-contained facts from the provided text. "
          "Keep wording faithful and include exact identifiers/codes when present."
      )
      INSTRUCTION_QUERY = (
          "Write a focused retrieval query that preserves key entities and attributes "
          "(names, IDs, codes, dates, locations) needed to find the answer."
      )
      INSTRUCTION_RESPONSE = (
          "Answer using retrieved memory only. Be concise and factual. "
          "If memory is insufficient, say you do not have enough information."
      )
      ALWAYS_ON_KNOWLEDGE = (
          "Stored notes may contain exact short answers (e.g., access codes). "
          "Prefer exact copied values from memory over paraphrasing."
      )
      
      
      @dataclass
      class Observation:
          """Single memory item to store."""
          raw: str = field(
              metadata={
                  "description": (
                      "A concise factual observation to store verbatim. "
                      "Include exact names, numbers, and codes."
                  )
              }
          )
      
      
      @dataclass
      class Query:
          """User information need for retrieval."""
          raw: str = field(
              metadata={
                  "description": (
                      "A natural-language search query describing what fact is needed."
                  )
              }
          )
      
      
      class KnowledgeBase:
          """Simple lexical-memory KB.
      
          Design intent:
          - Keep writes O(1) and reads lightweight (<5s budget).
          - Use deterministic token-overlap retrieval (no LLM calls needed).
          - Return only a short, relevant subset of memory (<=1000 chars).
          """
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
              # Tiny stopword set improves matching quality by focusing on content terms.
              self._stopwords = {
                  "the", "is", "a", "an", "and", "or", "to", "of", "in", "on", "for",
                  "with", "what", "who", "when", "where", "why", "how", "are", "was",
                  "were", "be", "been", "it", "its", "as", "at", "by", "from", "that",
                  "this", "these", "those", "do", "does", "did"
              }
      
          def _tokenize(self, text: str) -> set[str]:
              # Deterministic tokenizer: fast and robust for short factual notes.
              tokens = re.findall(r"[a-zA-Z0-9]+", text.lower())
              return {t for t in tokens if t and t not in self._stopwords}
      
          def write(self, observation: Observation) -> None:
              # Ignore empty writes to keep memory clean and retrieval precise.
              text = (observation.raw or "").strip()
              if not text:
                  self.toolkit.logger.debug("Skipped empty observation.")
                  return
              self.store.append(text)
              self.toolkit.logger.debug(f"Stored observation #{len(self.store)}: {text[:120]}")
      
          def read(self, query: Query) -> str:
              q = (query.raw or "").strip()
              self.toolkit.logger.debug(f"Read query: {q[:120]} | store_size={len(self.store)}")
      
              if not self.store:
                  return "No information stored."
      
              q_tokens = self._tokenize(q)
              scored: list[tuple[float, int, str]] = []
      
              # Score memories by lexical overlap; this reliably surfaces exact fact lines.
              for idx, text in enumerate(self.store):
                  t_tokens = self._tokenize(text)
                  overlap = len(q_tokens & t_tokens)
                  score = float(overlap)
                  if q and q.lower() in text.lower():
                      score += 5.0
                  if q_tokens and q_tokens.issubset(t_tokens):
                      score += 2.0
                  if score > 0:
                      scored.append((score, idx, text))
      
              if scored:
                  # Higher score first; tie-break by recency (higher idx).
                  scored.sort(key=lambda x: (x[0], x[1]), reverse=True)
                  candidates = [text for _, _, text in scored[:5]]
              else:
                  # Fallback: return only recent notes, not the whole store.
                  candidates = self.store[-3:]
      
              # Hard cap output to 1000 chars to satisfy runtime constraints.
              prefix = "Relevant memory:\n"
              max_len = 1000
              lines: list[str] = []
              for text in candidates:
                  line = f"- {text.strip()}"
                  tentative = prefix + ("\n".join(lines + [line]) if lines else line)
                  if len(tentative) <= max_len:
                      lines.append(line)
                  else:
                      break
      
              if not lines:
                  # Worst-case fallback still obeys 1000-char cap.
                  return (prefix + f"- {candidates[0]}")[:1000]
              return (prefix + "\n".join(lines))[:1000]
  
    ''',
    'round1_score': 0.0,
    'round2_output': 'Project Zephyr access code is DELTA-7742.',
    'round2_score': 1.0,
  })
# ---
# name: test_retrieved_memory_answer
  dict({
    'step1_output': '{"raw":"capital of France"}',
    'step1_prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from the knowledge base.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
    'step2_output': 'The capital of France is Paris.',
    'step2_prompt': '''
      <retrieved_memory>
      The capital of France is Paris.
      </retrieved_memory>
      
      Based on the above memory and the original question, provide your answer.
    ''',
  })
# ---
# name: test_runtime_violation_fix_oversized_read
  dict({
    'fixed_code': '''
      from dataclasses import dataclass, field
      
      INSTRUCTION_OBSERVATION = "Record the agent's observation in plain language, capturing the newest fact or update."
      INSTRUCTION_QUERY = "Formulate a query to retrieve relevant stored information concisely."
      INSTRUCTION_RESPONSE = "Respond with a clear summary referencing stored knowledge; keep it under 1000 characters."
      ALWAYS_ON_KNOWLEDGE = "Knowledge base stores short textual observations."
      
      
      @dataclass
      class Observation:
          raw: str = field(metadata={"description": "Raw text describing what was observed in the task environment."})
      
      
      @dataclass
      class Query:
          raw: str = field(metadata={"description": "Text describing what knowledge is being requested."})
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
      
          def read(self, query: Query) -> str:
              combined = " ".join(self.store)
              if not combined:
                  return ""
              result = combined[-1000:]
              self.toolkit.logger.debug(f"read result length {len(result)}")
              return result
  
    ''',
    'runtime_violation': 'kb.read() returned 5000 chars (limit: 1000)',
  })
# ---
# name: test_toolkit_llm_completion
  dict({
    'output': '5',
    'prompt': 'What is 2 + 3? Answer with just the number.',
  })
# ---
